--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,35 +1,3 @@
-# .github/workflows/go-ci-cd.yml
-
-name: Go CI/CD
-
-on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
-jobs:
-  build-and-test: # This job runs for both PRs and pushes
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: '1.24'
-          cache: true
-
-      - name: Download dependencies
-        run: go mod download
-
-      - name: Build (Check compilation of main package)
-        run: go build -v ./cmd/api
-
-      - name: Test
-        run: go test -v ./...
-
   deploy:
     needs: build-and-test
     if: github.ref == 'refs/heads/master' && github.event_name == 'push'
@@ -46,48 +14,64 @@ jobs:
           cache: true
 
       - name: Build production binary
-        # Build the specific main package and output to 'mychatbot' in the root
-        run: go build -v -o mychatbot ./cmd/api
+        # Build the specific main package and output to 'chat' in the root
+        run: go build -v -o chat ./cmd/api
 
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@v1.0.3
+      # Step 1: Copy the built binary to the server
+      - name: Copy binary via SCP
+        uses: appleboy/scp-action@v0.1.7 # Use the dedicated SCP action
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          port: 22 # Default SSH port, change if needed
+          source: "chat" # The binary built locally in the runner
+          target: ${{ secrets.DEPLOY_TARGET_PATH }} # The FULL destination path on the server
+          strip_components: 0 # Keep the filename
+
+      # Step 2: Execute commands on the server (stop, chmod, start)
+      - name: Deploy via SSH (Execute Commands)
+        uses: appleboy/ssh-action@v1.0.3 # Keep the SSH action for commands
         with:
           host: ${{ secrets.DEPLOY_HOST }}
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_KEY }}
           port: 22
-          source: "mychatbot"
-          target: ${{ secrets.DEPLOY_TARGET_PATH }} # Destination path on the server
           script: |
-            # Define the target directory and binary path on the server
-            # Assuming DEPLOY_TARGET_PATH is the directory where the binary should live
-            TARGET_DIR=$(dirname ${{ secrets.DEPLOY_TARGET_PATH }})
-            BINARY_NAME=$(basename ${{ secrets.DEPLOY_TARGET_PATH }}) # Get the intended binary name from the target path
-            BINARY_PATH="$TARGET_DIR/$BINARY_NAME"
+            # Use the DEPLOY_TARGET_PATH directly as the full binary path
+            BINARY_PATH="${{ secrets.DEPLOY_TARGET_PATH }}"
+            TARGET_DIR=$(dirname "$BINARY_PATH")
+            BINARY_NAME=$(basename "$BINARY_PATH")
 
-            echo "Target directory: $TARGET_DIR"
-            echo "Binary name: $BINARY_NAME"
-            echo "Full binary path: $BINARY_PATH"
+            echo "--- Running Deployment Script ---"
+
+            echo "Checking file existence and permissions before chmod:"
+            ls -l "$BINARY_PATH" || echo "File does not exist yet (expected after SCP)."
 
             echo "Stopping existing application (if running)..."
             # Use pkill with the full path for specificity
-            # The || true prevents the script from failing if the process isn't found
-            pkill -f "$BINARY_PATH" || true
+            pkill -f "$BINARY_PATH" || echo "pkill: No process found or failed (continuing)."
             sleep 2 # Give time for the process to stop
 
-            echo "Ensuring target directory exists: $TARGET_DIR"
-            mkdir -p $TARGET_DIR # Ensure the directory exists
+            echo "Ensuring target directory exists"
+            # Use -p to avoid errors if it exists, handle potential permission issues
+            mkdir -p "$TARGET_DIR" || { echo "Failed to ensure directory exists"; exit 1; }
 
-            # Note: The 'source' and 'target' parameters already copied the new binary
-            # from the runner's 'mychatbot' to the server's '$BINARY_PATH'
+            echo "Attempting to set execute permissions on BINARY_PATH..."
+            chmod +x "$BINARY_PATH" || { echo "Failed to chmod +x BINARY_PATH"; exit 1; }
 
-            echo "Ensuring new binary is executable..."
-            chmod +x "$BINARY_PATH"
+            echo "Checking file permissions AFTER chmod:"
+            ls -l "$BINARY_PATH"
 
-            echo "Starting new application in directory $TARGET_DIR..."
-            cd $TARGET_DIR || { echo "Failed to cd into $TARGET_DIR"; exit 1; }
-            # Start the binary using its name within its directory
+            echo "Starting new application in directory TARGET_DIR..."
+            cd "$TARGET_DIR" || { echo "Failed to cd into TARGET_DIR"; exit 1; }
+
+            echo "Attempting to run ./BINARY_NAME with nohup..."
             nohup "./$BINARY_NAME" > chatbot.log 2>&1 &
 
-            echo "Deployment script executed."
+            # Check if the process started (optional, might need adjustment)
+            sleep 2
+            pgrep -f "$BINARY_PATH" > /dev/null || echo "WARNING: Process BINARY_NAME may not have started successfully."
+
+            echo "Deployment script finished."
 
