--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,3 +1,38 @@
+# .github/workflows/go-ci-cd.yml
+
+name: Go CI/CD
+
+on:
+  push:
+    branches: [ "master" ] # Or "main" if that's your branch
+  pull_request:
+    branches: [ "master" ] # Or "main"
+
+jobs:
+  build-and-test: # This job runs for both PRs and pushes
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.24' # Use your project's Go version
+          cache: true
+
+      - name: Download dependencies
+        # Runs from the root, finds go.mod
+        run: go mod download
+
+      - name: Build (Check compilation of main package)
+        # Explicitly build the main package to ensure it compiles
+        run: go build -v ./cmd/api
+
+      - name: Test
+        # Runs tests in all subdirectories from the root
+        run: go test -v ./...
+        
   deploy:
     needs: build-and-test
     if: github.ref == 'refs/heads/master' && github.event_name == 'push'
