--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
         run: go mod download
 
       - name: Build # Build just to ensure it compiles
-        run: go build -v ./...
+        run: go build -v ./cmd/api
 
       - name: Test
         run: go test -v ./...
@@ -48,7 +48,7 @@ jobs:
           cache: true
 
       - name: Build production binary
-        run: go build -v -o mychatbot .
+        run: go build -v -o mychatbot ./cmd/api
 
       # Use a popular SSH action to copy the file and run commands
       - name: Deploy via SSH
