--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,13 @@ jobs:
 
       - name: Test
         run: go test -v ./...
+        env:
+          test_guild_id: ${{secrets.test_guild_id}}
+          test_channel_id: ${{secrets.test_channel_id}}
+          api_key: ${{secrets.api_key}}
+          youtube_api_key: ${{secrets.youtube_api_key}}
+          news_api_key: ${{secrets.news_api_key}}
+          discord_bot_token: ${{secretes.discord_bot_token}}
 
   deploy:
     # Only run this job if the push was to the main branch (not on PRs)
