--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,7 @@ jobs:
         run: go build -v ./cmd/api
 
       - name: Test
-        run: go test -v ./...
+        run: go test -coverprofile=coverage.txt
         env: 
           test_guild_id: ${{secrets.test_guild_id}}
           test_channel_id: ${{secrets.test_channel_id}}
@@ -36,6 +36,11 @@ jobs:
           youtube_api_key: ${{secrets.youtube_api_key}}
           news_api_key: ${{secrets.news_api_key}}
           discord_bot_token: ${{secrets.discord_bot_token}}
+
+      - name: Upload results to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
         
 
   deploy:
