--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,8 +28,7 @@ jobs:
         run: go build -v ./cmd/api
 
       - name: Test
-        run: go test -v ./...
-
+        run: go test -coverprofile=coverage.txt
         env: 
           test_guild_id: ${{secrets.test_guild_id}}
           test_channel_id: ${{secrets.test_channel_id}}
@@ -37,9 +36,12 @@ jobs:
           youtube_api_key: ${{secrets.youtube_api_key}}
           news_api_key: ${{secrets.news_api_key}}
           discord_bot_token: ${{secrets.discord_bot_token}}
-          test_voice_channel_id: ${{secrets.test_voice_channel_id}}
-          test_voice_channel_id_2: ${{secrets.test_voice_channel_id_2}}
-          test_voice_channel_id_3: ${{secrets.test_voice_channel_id_3}}
+
+      - name: Upload results to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+        
 
   deploy:
     # Only run this job if the push was to the main branch (not on PRs)
@@ -86,4 +88,3 @@ jobs:
                   cd ${{ secrets.DEPLOY_TARGET_PATH }}
                   ./restart.sh
                   echo "Deployment script executed"
-
