--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,7 +28,7 @@ jobs:
         run: go build -v ./cmd/api
 
       - name: Test
-        run: go test -coverprofile=coverage.txt
+        run: go test ./.. -coverprofile=coverage.txt
         env: 
           test_guild_id: ${{secrets.test_guild_id}}
           test_channel_id: ${{secrets.test_channel_id}}
