--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,6 +37,10 @@ jobs:
           youtube_api_key: ${{secrets.youtube_api_key}}
           news_api_key: ${{secrets.news_api_key}}
           discord_bot_token: ${{secrets.discord_bot_token}}
+          test_voice_channel_id: ${{secrets.test_voice_channel_id}}
+          test_voice_channel_id_2: ${{secrets.test_voice_channel_id_2}}
+          test_voice_channel_id_3: ${{secrets.test_voice_channel_id_3}}
+          
 
       - name: Upload results to Codecov
         uses: codecov/codecov-action@v5
