--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -36,6 +36,11 @@ jobs:
         run: |
           echo "${{ secrets.YOUTUBE_COOKIE_TXT_BASE64 }}" | base64 --decode > ~/cookies.txt
 
+      - name: Set up ffmpeg
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+
       - name: Build # Build just to ensure it compiles
         run: go build -v ./cmd/api
 
