--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,6 +35,8 @@ jobs:
       - name: Decode YouTube cookies
         run: |
           echo "${{ secrets.YOUTUBE_COOKIE_TXT_BASE64 }}" | base64 --decode > cookies.txt
+          ls -la cookies.txt
+          head -n 2 cookies.txt  # Show just the first two lines to avoid leaking sensitive data
 
       - name: Set up ffmpeg
         run: |
