Use absolute path for cookies file in YouTube cookies decoding

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Decode YouTube cookies
         run: |
-          echo "${{ secrets.YOUTUBE_COOKIE_TXT_BASE64 }}" | base64 --decode > cookies.txt
+          echo "${{ secrets.YOUTUBE_COOKIE_TXT_BASE64 }}" | base64 --decode > /home/runner/work/chat/chat/internal/music/cookies.txt 
           ls -la cookies.txt
           chmod 644 cookies.txt
           head -n 2 cookies.txt  # Show just the first two lines to avoid leaking sensitive data
